<resources>
    <string name="app_name">SafeTourBCN</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_repeat">Repeat password</string>
    <string name="action_log_in">Log in</string>
    <string name="action_sign_up">Don\'t have an account? Sign up!</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="action_log_in_short">Log in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="passwords_not_equals">Those passwords didn\'t match</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logo">Logo</string>
    <string name="title_activity_maps">Map</string>
    <string name="perfil">Profile</string>
    <string name="email">Email:</string>
    <string name="volver">Back</string>
    <string name="name">Name</string>


    <!-- Errores  -->
    <string name="retry">Try Again</string>
    <string name="connection_error">Connection Error</string>
    <string name="not_match">User or password are incorrect</string>


    <!--    -->
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_map">Map</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>


    <!-- Filter Menu -->
    <string name="filters">Filters</string>
    <string name="ok">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="price">Price</string>
    <string name="distance">Distance</string>
    <string name="rating">Rating</string>
    <string name="category">Category</string>
    <string name="discount">Discount</string>
    <string name="reset">Reset</string>

    <!-- Search -->
    <string name="search">Search</string>

    <!-- Valoraciones -->
    <string name="ratings">Ratings</string>

    <!-- Profile -->
    <string name="userProf">User Profile</string>
    <string name="password">Password:</string>
    <string name="editPassword">Enter your password</string>
    <string name="editPassword2">Enter your new password</string>
    <string name="editProf">EDIT</string>
    <string name="save">Save</string>


    <!-- InfoWindow -->
    <string name="reserva_button">Access establishment</string>

    <!-- Establishment -->
    <string name="text">Do you want to reserve? Choose a date and a group</string>
    <string name="text2">How many people?</string>
    <string name="button">Reserve now</string>

    <string-array name="filter_menu_array">
        <item>All</item>
        <item>Bar</item>
        <item>Restaurant</item>
    </string-array>
    <string-array name="star_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="bookings">Bookings</string>
    <string name="no_bookings">You haven\'t booked yet!</string>
    <string name="user_already_exists">The user already exist</string>
</resources>