<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="116dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/category"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="356dp"
            android:layout_height="50dp"
            android:prompt="@string/category" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="116dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/distance"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/textNumberDistance"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:maxLength="2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="km" />

    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/price"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/price1"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:text="$"
            />

        <RadioButton
            android:id="@+id/price2"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:text="$$" />

        <RadioButton
            android:id="@+id/price3"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:text="$$$" />
    </RadioGroup>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="116dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/rating"
            android:textSize="20sp" />

        <RatingBar
            android:id="@+id/simpleRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="319dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/discount"
            android:textSize="20sp" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp" />
    </LinearLayout>
</LinearLayout>